# sentinel

./: README.md  docker-compose.yml  sentinel.service  start-sentinel
app/: Cargo.toml  Dockerfile.template
app/src/: lib.rs  main.rs
sentinel/: .gitignore  Cargo.toml  Dockerfile.template
sentinel/src/: lib.rs  main.rs
