[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.24.6"
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"
